k8s/newbie-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: newbie
    role: frontend
  name: newbie-bot
  namespace: cw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newbie
  template:
    metadata:
      labels:
        app: newbie
        role: frontend
    spec:
      hostname: bot
      subdomain: newbie
      containers:
      - image: itcw/newbie_bot:v0.2
        imagePullPolicy: Always
        name: bot
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /usr/src/env
          name: env
      terminationGracePeriodSeconds: 90
      volumes:
      - name: env
        secret:
          secretName: newbie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: newbie
    role: backend
  name: newbie-db
  namespace: cw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newbie
  template:
    metadata:
      labels:
        app: newbie
        role: backend
    spec:
      hostname: db
      subdomain: newbie
      containers:
      - image: itcw/newbie_db:v0.2
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
      terminationGracePeriodSeconds: 90
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: newbie-db
