k8s/prod-newbie-bot-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: newbie
    role: frontend
  name: newbie-bot
  namespace: cw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newbie
  template:
    metadata:
      labels:
        app: newbie
        role: frontend
    spec:
      hostname: bot
      subdomain: newbie
      containers:
      - image: itcw/newbie_bot:v0.2-47-gdb6ad85
        imagePullPolicy: Always
        name: bot
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /usr/src/env
          name: env
      terminationGracePeriodSeconds: 90
      volumes:
      - name: env
        secret:
          secretName: newbie
