k8s/props-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: props
  namespace: cw
spec:
  selector:
    matchLabels:
      app: props
  template:
    metadata:
      labels:
        app: props
    spec:
      containers:
      - name: props
        image: itcw/props_bot:v0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
