k8s/newbie-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: newbie-bot
  namespace: cw
  labels:
    app: newbie
    role: frontend
spec:
  ports:
  - port: 443
    targetPort: 5000
  selector: {
    app: newbie,
    role: frontend,
  }
---
apiVersion: v1
kind: Service
metadata:
  name: newbie-db
  namespace: cw
  labels:
    app: newbie
    role: backend
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector: {
    app: newbie,
    role: backend,
  }
