k8s/prod-newbie-bot-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: newbie-bot
  namespace: cw
  labels:
    app: newbie
    role: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:783633885093:certificate/e13e60ff-0885-42cc-b002-841bee285eb2
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: 5000
  - name: https
    port: 443
    targetPort: 5000
  selector: {
    app: newbie,
    role: frontend,
  }
  sessionAffinity: None
  type: LoadBalancer
