k8s/props-service.yml
apiVersion: v1
kind: Service
metadata:
  name: props
  namespace: cw
  labels:
    app: props
spec:
  ports:
  - port: 8080
  selector:
    app: props
