k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: $APP_PROJNAME
  namespace: $APP_NAMESPACE
  labels:
    app: $APP_PROJNAME
spec:
  selector:
    app: $APP_PROJNAME
  ports:
    - port: 8080
