k8s/stage-newbie-service.yml
apiVersion: v1
kind: Service
metadata:
  name: newbie-stage
  namespace: cw
  labels:
    app: newbie-stage
spec:
  ports:
  - port: 443
    targetPort: 5000
  selector:
    app: newbie-stage
